RIP freedium.cfd

--- a/content/post/il-2025-08.adoc
+++ b/content/post/il-2025-08.adoc
@@ -17,28 +17,28 @@ TIP: You can find previous editions of _Interesting Links_ link:/categories/inte
 
 == Data Engineering
 * 🔥 Ben Rogojan (a.k.a. SeattleDataGuy) has a great list of https://seattledataguy.substack.com/p/5-things-in-data-engineering-that[5 Things in Data Engineering That Still Hold True After 10 Years] (_guess what: data modelling matters, if you start with crap data you'll end with crap data, and so on…_).
-* Veronika Durgin shares some https://freedium.cfd/https://medium.com/@durginv/self-recovering-data-pipelines-c1e4e6b7fbce[good tips for building resilient data pipelines].
-* Some good pointers for why you might want to https://freedium.cfd/https://blog.dataengineerthings.org/data-platform-modernization-how-to-pick-your-stack-in-2025-part-1-da9045b0b4ed[modernise your data platform], and https://freedium.cfd/https://blog.dataengineerthings.org/data-platform-modernization-how-to-pick-your-stack-in-2025-part-2-023308ffc276[how to pick your stack if you do so].
-* 🔥 Aleksandr Klein has a thoughtful post about https://freedium.cfd/https://medium.com/justeattakeaway-tech/the-mythic-journey-of-data-quality-maturity-df7b14524180[The Mythic Journey of Data Quality Maturity]
+* Veronika Durgin shares some https://medium.com/@durginv/self-recovering-data-pipelines-c1e4e6b7fbce[good tips for building resilient data pipelines].
+* Some good pointers for why you might want to https://blog.dataengineerthings.org/data-platform-modernization-how-to-pick-your-stack-in-2025-part-1-da9045b0b4ed[modernise your data platform], and https://blog.dataengineerthings.org/data-platform-modernization-how-to-pick-your-stack-in-2025-part-2-023308ffc276[how to pick your stack if you do so].
+* 🔥 Aleksandr Klein has a thoughtful post about https://medium.com/justeattakeaway-tech/the-mythic-journey-of-data-quality-maturity-df7b14524180[The Mythic Journey of Data Quality Maturity]
 * A useful post from Fiore Mario Vitale showing the use of OpenLineage to https://debezium.io/blog/2025/07/21/openlineage-debezium-flink/[troubleshoot data pipelines] in Debezium and Flink.
 
 == Data in Action
 * Building your own data ingestion framework may be a siren song for many, but Cloudflare operate at the kind of scale where it's perhaps worth it. Read about https://blog.cloudflare.com/building-jetflow-a-framework-for-flexible-performant-data-pipelines-at-cloudflare/[Jetflow] here.
 * Nubank have published a https://building.nubank.com/scaling-fraud-defense-how-nubank-evolved-its-risk-analysis-platform/[series] of https://building.nubank.com/mastering-streaming-data/[interesting] https://building.nubank.com/avalanche-stack-and-real-time-streaming-applications-at-nu/[blog posts] about their use of stream processing, including with Kafka and Flink. There's also a https://www.youtube.com/watch?v=awhhBlg1SqY[meetup recording] (in Spanish) that looks like it has lots more details.
 * Details from UK Bank Monzo on their Go-based https://monzo.com/blog/build-a-reactive-fraud-prevention-platform[fraud prevention platform].
-* 🔥 Excellent blog post from Anton Borisov at Fresha detailing why and how they https://freedium.cfd/https://medium.com/fresha-data-engineering/how-we-accidentally-became-one-of-uks-first-starrocks-production-pioneers-7db249f10010[adopted StarRocks] after finding that Snowflake "_wasn't cost-effective — or fast enough — for chatty, near-real-time product and operational analytics._".
-* Guidewire have published a couple of interesting blog posts looking at their https://freedium.cfd/https://medium.com/guidewire-engineering-blog/how-to-test-data-ingestion-pipeline-performance-at-scale-in-the-cloud-2862a86e598d[data platform design, testing], and https://freedium.cfd/https://medium.com/guidewire-engineering-blog/how-we-cut-operating-costs-by-80-while-ensuring-data-integrity-at-scale-fc798ecc35fc[optimisation].
+* 🔥 Excellent blog post from Anton Borisov at Fresha detailing why and how they https://medium.com/fresha-data-engineering/how-we-accidentally-became-one-of-uks-first-starrocks-production-pioneers-7db249f10010[adopted StarRocks] after finding that Snowflake "_wasn't cost-effective — or fast enough — for chatty, near-real-time product and operational analytics._".
+* Guidewire have published a couple of interesting blog posts looking at their https://medium.com/guidewire-engineering-blog/how-to-test-data-ingestion-pipeline-performance-at-scale-in-the-cloud-2862a86e598d[data platform design, testing], and https://medium.com/guidewire-engineering-blog/how-we-cut-operating-costs-by-80-while-ensuring-data-integrity-at-scale-fc798ecc35fc[optimisation].
 
 == Apache Kafka
-* Trendyol's Ahmet Tortumlu walks through the process they follow when https://freedium.cfd/https://medium.com/trendyol-tech/node-replacement-in-kafka-lessons-from-a-kraft-controller-08dc5badb018[replacing KRaft controller nodes].
-* A look at how you could use Kafka to https://freedium.cfd/https://medium.com/@denizhan.aras/coding-the-standards-i-real-time-baggage-tracking-system-with-iata-r753-spring-boot-kafka-b1f5e8c568c1[implement the international baggage tracking system ("IATA R753")].
+* Trendyol's Ahmet Tortumlu walks through the process they follow when https://medium.com/trendyol-tech/node-replacement-in-kafka-lessons-from-a-kraft-controller-08dc5badb018[replacing KRaft controller nodes].
+* A look at how you could use Kafka to https://medium.com/@denizhan.aras/coding-the-standards-i-real-time-baggage-tracking-system-with-iata-r753-spring-boot-kafka-b1f5e8c568c1[implement the international baggage tracking system ("IATA R753")].
 * 🔥 The https://old.reddit.com/r/apachekafka[`r/apachekafka` subreddit] recently hit 17k members. It's a funny place, with a mix of shills, trolls, n00bs who won't even help themselves—and some lovely community conversations that remind me why I continue to enjoy being part of it :) Here are a handful of threads that caught my eye if you want to sample the fare:
 ** https://old.reddit.com/r/apachekafka/comments/1mtnm1l/best_way_to_idenditfy_job_completion_when/[Best way to identify job completion…]
 ** https://old.reddit.com/r/apachekafka/comments/1mjz2xk/did_we_forget_the_primary_use_case_for_kafka/[Did we forget the primary use case for Kafka?]
 ** https://old.reddit.com/r/apachekafka/comments/1mp2hjb/built_an_83000_rps_ticket_reservation_system_and/[Built an 83,000+ RPS ticket reservation system…]
 * Another month, another Kafka UI—this time a TUI (Text User Interface) with a name I'll drink to: https://github.com/jonas-grgt/ktea[ktea].
-* A https://freedium.cfd/https://medium.com/cloudnativepub/evolving-kafka-integration-strategy-choosing-the-right-tool-as-requirements-grow-d9f7aaf56d80[practical guide on different techniques to use] when using Kafka for integration.
-* A well-written https://freedium.cfd/https://newfrontcreative.medium.com/escaping-the-void-of-the-data-abyss-337770a39fbc[two] https://freedium.cfd/https://newfrontcreative.medium.com/beyond-the-data-abyss-6bf2d1e6e34a[part] account of Nike's journey from TSV (_shudder_) to Protobuf for their data pipelines.
+* A https://medium.com/cloudnativepub/evolving-kafka-integration-strategy-choosing-the-right-tool-as-requirements-grow-d9f7aaf56d80[practical guide on different techniques to use] when using Kafka for integration.
+* A well-written https://newfrontcreative.medium.com/escaping-the-void-of-the-data-abyss-337770a39fbc[two] https://newfrontcreative.medium.com/beyond-the-data-abyss-6bf2d1e6e34a[part] account of Nike's journey from TSV (_shudder_) to Protobuf for their data pipelines.
 * After talks about Northguard and Xinfra in April, LinkedIn's Stream Processing meetup continued with its impressive content in July hosting three talks:
 ** https://www.youtube.com/watch?v=J55KzysEPHk&t=35s[Scaling Kafka for Netflix's Record-Breaking Live Events] (Harshit Mittal, Netflix)
 ** https://www.youtube.com/watch?v=J55KzysEPHk&t=1920s[Kafka-less, Cloud-Native Stream Processing with Apache Beam and Iceberg] (Talat Uyarer, Google)
@@ -51,9 +51,9 @@ _Let's be honest, it's mostly just Apache Iceberg…_😅
 * 🔥 I spent some time looking into Flink vs Kafka Connect vs Tableflow for getting data into Iceberg, and wrote up some of the comparison points: https://rmoff.net/2025/08/18/kafka-to-iceberg-exploring-the-options/[Kafka to Iceberg - Exploring the Options]
 * Aiven published https://github.com/Aiven-Open/tiered-storage-for-apache-kafka/blob/main/iceberg_whitepaper.md[a whitepaper] with details of their plans for writing to Iceberg directly from Kafka
 * David Reger published a https://blog.msgdataplatform.com/from-kafka-topics-to-iceberg-with-confluent-tableflow-5708e02d0d0a[detailed writeup] of Tableflow (Confluent's tool for getting data from Kafka to Iceberg).
-* A while back https://lakefs.io/blog/data-engineering-patterns-write-audit-publish/[I wrote about] the Write-Audit-Publish pattern, and so enjoyed reading these two blog posts from Turóczy Attila about https://freedium.cfd/https://medium.com/@aturoczy/elegant-etl-with-apache-iceberg-branching-489a3bb89a41[branching] and https://freedium.cfd/https://medium.com/@aturoczy/tagging-in-apache-iceberg-fdb7a19c0bf2[tagging] in Apache Iceberg.
+* A while back https://lakefs.io/blog/data-engineering-patterns-write-audit-publish/[I wrote about] the Write-Audit-Publish pattern, and so enjoyed reading these two blog posts from Turóczy Attila about https://medium.com/@aturoczy/elegant-etl-with-apache-iceberg-branching-489a3bb89a41[branching] and https://medium.com/@aturoczy/tagging-in-apache-iceberg-fdb7a19c0bf2[tagging] in Apache Iceberg.
 * 🔥 Details of taking practical advantage of more Iceberg features including time travel and schema evolution are covered in this article about building https://www.infoq.com/articles/reproducible-ml-iceberg/[reproducible ML systems with Iceberg and SparkSQL]
-* A nice hands-on example of https://freedium.cfd/https://medium.com/@aalopatin/from-kafka-to-iceberg-sinking-kafka-topics-into-iceberg-tables-e23edec2777b[using the Kafka Connect Iceberg sink] with Nessie and MinIO.
+* A nice hands-on example of https://medium.com/@aalopatin/from-kafka-to-iceberg-sinking-kafka-topics-into-iceberg-tables-e23edec2777b[using the Kafka Connect Iceberg sink] with Nessie and MinIO.
 * The columnar format https://github.com/vortex-data/vortex[Vortex] has been https://www.linuxfoundation.org/press/lf-ai-data-foundation-hosts-vortex-project-to-power-high-performance-data-access-for-ai-and-analytics[donated] to the Linux Foundation. Earlier this year there was a https://spiraldb.com/post/vortex-on-ice[PoC to show how it can speed up Iceberg queries], with an https://www.youtube.com/watch?v=p6ZKY8JViCA[interesting talk] at Iceberg Summit on the same.
 * A https://www.alibabacloud.com/blog/apache-paimon-real-time-lake-storage-with-iceberg-compatibility-2025_602485[comprehensive introduction] summarised from https://www.youtube.com/watch?v=LEdz53_diW4&list=PLDX4T_cnKjD2qa7EwyxHb9H8pBACbGkkE&index=4[a talk] at this year's Flink Forward Asia conference about "the other" open table format that people often forget—Apache Paimon. TIL it supports integration with Iceberg.
 
@@ -68,14 +68,14 @@ _Let's be honest, it's mostly just Apache Iceberg…_😅
 
 == RDBMS + CDC
 * Debezium https://debezium.io/blog/2025/08/13/debezium-3-2-1-final-released/[3.2.1.Final] and https://debezium.io/blog/2025/08/05/debezium-3-3-alpha1-released/[3.3.0.Alpha1] have been released
-* Yingjun Wu has written a https://freedium.cfd/https://medium.com/@yingjunwu/why-we-didnt-rewrite-debezium-in-rust-66c35ae9dce8[good explanation] about why RisingWave use the embedded https://debezium.io/documentation//reference/stable/development/engine.html[Debezium Engine] in their product—and why they didn't rewrite it in Rust to match the rest of their product code.
+* Yingjun Wu has written a https://medium.com/@yingjunwu/why-we-didnt-rewrite-debezium-in-rust-66c35ae9dce8[good explanation] about why RisingWave use the embedded https://debezium.io/documentation//reference/stable/development/engine.html[Debezium Engine] in their product—and why they didn't rewrite it in Rust to match the rest of their product code.
 * A practical guide from Nick Tobey on https://www.dolthub.com/blog/2024-06-25-polymorphic-associations/[choosing a database schema for polymorphic data].
 * 🔥 Richard van der Hoff writes about something to strike fear into any DBA's heart: corruption in the database. In this case, a https://matrix.org/blog/2025/07/postgres-corruption-postmortem/[corrupted Postgres index].
 * More Postgres goodness, this time from Gunnar Morling: https://www.morling.dev/blog/postgres-replication-slots-confirmed-flush-lsn-vs-restart-lsn/[Postgres Replication Slots: Confirmed Flush LSN vs. Restart LSN]
 
 == General Data Stuff
 * 🔥🔥 Hot off the press is another banger from Jack Vanlightly, this time looking at https://jack-vanlightly.com/blog/2025/8/21/a-conceptual-model-for-storage-unification[A Conceptual Model for Storage Unification]. If you're interested in things like writing Kafka data to Iceberg, this is a vital foundation for understanding the design considerations and trade-offs.
-* How Klaviyo use Ray for their https://freedium.cfd/https://klaviyo.tech/ray-data-train-tune-at-klaviyo-bca9f14abf21[scalable data processing, training, and optimization]
+* How Klaviyo use Ray for their https://klaviyo.tech/ray-data-train-tune-at-klaviyo-bca9f14abf21[scalable data processing, training, and optimization]
 * Prompted by https://www.youtube.com/watch?v=z5t3b3EAc84&t=360s[a talk that Tesla gave] about ingesting metrics into ClickHouse, Javier Santana at TinyBird https://www.tinybird.co/blog-posts/1b-rows-per-second-clickhouse[set out to reproduce the feat using a 50-node ClickHouse cluster]. In a sense these exercises are somewhat BSD and clickbait-y, but I do like the clear steps and detail that he showed in the blog post :).
 * 🔥 If anyone is going to need to build their own time-series database (TSDB), Datadog is going to be one of the top contenders. In https://www.datadoghq.com/blog/engineering/rust-timeseries-engine/[this blog post] they write about how they built it using Rust and the benefits they saw (60x ingest, 5x query). Also interesting is https://www.datadoghq.com/blog/engineering/rust-timeseries-engine/#how-we-built-the-6th-generation-of-our-real-time-metrics-storage[the history] of their previous TSDB platforms.
 * https://github.com/cwida/FastLanes[FastLanes] describes itself as a _Next-Gen Big Data File Format_, aimed as a replacement to columnar formats such as the somewhat-ubiquitous Parquet. Beyond several https://github.com/cwida/FastLanes?tab=readme-ov-file#publications[conference papers] it's unclear if there's any adoption of the format in the wild yet.
@@ -85,7 +85,7 @@ _Let's be honest, it's mostly just Apache Iceberg…_😅
 
 _Nothing to do with data, but stuff that I've found interesting or has made me smile._
 
-* 🔥 Brad Stulberg's article https://freedium.cfd/https://bstulberg.medium.com/motivation-is-overrated-heres-what-works-instead-7c5744efd82f[Motivation is Overrated: Here's What Works Instead] is down to earth and well worth a read.
+* 🔥 Brad Stulberg's article https://bstulberg.medium.com/motivation-is-overrated-heres-what-works-instead-7c5744efd82f[Motivation is Overrated: Here's What Works Instead] is down to earth and well worth a read.
 +
 > you cannot replace negative thinking with positive thinking. But you can replace negative thinking with positive action.
 
@@ -104,5 +104,5 @@ _Nothing to do with data, but stuff that I've found interesting or has made me s
 [NOTE]
 ====
 * If you like these kind of links you might like to read about https://rmoff.net/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
-* I'm linking out to https://freedium.cfd/[Freedium] versions of Medium posts, because Medium seems to be pay-walling a bunch of otherwise-freely accessible content.
+* If you have trouble access Medium posts, try using https://scribe.rip/[`scribe.rip`].
 ====
