--- a/content/post/il-2025-09.adoc
+++ b/content/post/il-2025-09.adoc
@@ -177,5 +177,5 @@ _Nothing to do with data, but stuff that I've found interesting or has made me s
 [NOTE]
 ====
 * If you like these kind of links you might like to read about https://rmoff.net/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
-* If you have trouble access Medium posts, try using https://scribe.rip/[`scribe.rip`].
+* If you have trouble accessing Medium posts, try using https://scribe.rip/[`scribe.rip`].
 ====
