--- a/content/post/il-2025-10.adoc
+++ b/content/post/il-2025-10.adoc
@@ -203,5 +203,5 @@ https://blog.pixelmelt.dev/kindle-web-drm/[How I Reversed Amazon's Kindle Web Ob
 [NOTE]
 ====
 * If you like these kind of links you might like to read about https://rmoff.net/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
-* If you have trouble access Medium posts, try using https://scribe.rip/[`scribe.rip`].
+* If you have trouble accessing Medium posts, try using https://scribe.rip/[`scribe.rip`].
 ====
