the one that got away

--- a/content/post/il-2025-06.adoc
+++ b/content/post/il-2025-06.adoc
@@ -29,7 +29,7 @@ Some do slightly different things (such as management e.g. compaction) or have a
 * Details of the latest Iceberg version https://www.databricks.com/blog/iceberg-v3-moving-ecosystem-towards-unification[Iceberg v3: Moving the Ecosystem Towards Unification]
 * In a blog post that makes me nostalgic for link:/2010/12/30/data-warehousing-and-statistics-in-oracle-11g-incremental-global-statistics/[my Oracle days], Yuval Yogev writes about https://medium.com/@yogevyuval/making-sense-of-apache-iceberg-statistics-5a114d8e90d1[statistics in Iceberg]
 * Some useful points to think about from Jacek Migdal covering where https://quesma.com/blog-detail/apache-iceberg-practical-limitations-2025[Iceberg might not be the right fit for your requirements]
-* Vu Trinh has a nice summary of https://freedium.cfd/https://blog.det.life/how-did-meta-modernize-their-lakehouse-f2fec45af2f4[how Meta modernised their lakehouse], based on https://www.cidrdb.org/cidr2023/papers/p77-chattopadhyay.pdf[a paper from 2023]
+* Vu Trinh has a nice summary of https://blog.det.life/how-did-meta-modernize-their-lakehouse-f2fec45af2f4[how Meta modernised their lakehouse], based on https://www.cidrdb.org/cidr2023/papers/p77-chattopadhyay.pdf[a paper from 2023]
 
 * Apache Hudi is still kicking around and in use—this blog post from Shiyan Xu details https://blog.datumagic.ai/p/apache-hudi-does-xyz-110[file pruning with multi-modal index].
 
