RIP freedium.cfd (#197)
* RIP freedium.cfd

* grammar, yo

* the one that got away

--- a/content/post/il-2025-07.adoc
+++ b/content/post/il-2025-07.adoc
@@ -21,15 +21,12 @@ First up, allow me a shameless plug for my blog posts this month:
 
 And with that, on to this month's set of https://rmoff.net/categories/interesting-links/[Interesting Links].
 
-NOTE: I'm linking out to https://freedium.cfd/[Freedium] versions of Medium posts this month, because Medium seems to be pay-walling a bunch of otherwise-freely accessible content.
-Yay for the open internet 🙄.
-
 == Data Engineering
 
-* A nice hands-on example of Sanchit Vijay showing how to use Spark to https://freedium.cfd/https://blog.dataengineerthings.org/dare-2-cross-cloud-storage-adventure-s3-r2-d68ed61faece[move data from AWS S3 to Cloudflare R2].
+* A nice hands-on example of Sanchit Vijay showing how to use Spark to https://blog.dataengineerthings.org/dare-2-cross-cloud-storage-adventure-s3-r2-d68ed61faece[move data from AWS S3 to Cloudflare R2].
 * Interesting details on the Apache DataFusion blog about https://datafusion.apache.org/blog/2025/07/14/user-defined-parquet-indexes/[embedding User-Defined Indexes in Apache Parquet Files].
-* 🔥 My colleague Gilles Philippart wrote up a good guide on getting https://freedium.cfd/https://medium.com/@gilles.philippart/build-a-data-lakehouse-with-apache-iceberg-polaris-trino-minio-349c534ecd98[Apache Iceberg, Polaris, Trino, and MinIO] running together locally.
-* In _Lakehouse 2.0: The Open System That Lakehouse 1.0 Was Meant to Be_, Animesh Kumar & Travis Thompson discuss the history of the lakehouse and its evolution from closed formats and ecosystems to open formats and interchangable engines https://freedium.cfd/https://medium.com/@community_md101/lakehouse-2-0-the-open-system-that-lakehouse-1-0-was-meant-to-be-part-1-743efc645ea6[Part 1] & https://freedium.cfd/https://medium.com/@community_md101/introducing-lakehouse-2-0-what-changes-769a1c6a758e[Part 2].
+* 🔥 My colleague Gilles Philippart wrote up a good guide on getting https://medium.com/@gilles.philippart/build-a-data-lakehouse-with-apache-iceberg-polaris-trino-minio-349c534ecd98[Apache Iceberg, Polaris, Trino, and MinIO] running together locally.
+* In _Lakehouse 2.0: The Open System That Lakehouse 1.0 Was Meant to Be_, Animesh Kumar & Travis Thompson discuss the history of the lakehouse and its evolution from closed formats and ecosystems to open formats and interchangable engines https://medium.com/@community_md101/lakehouse-2-0-the-open-system-that-lakehouse-1-0-was-meant-to-be-part-1-743efc645ea6[Part 1] & https://medium.com/@community_md101/introducing-lakehouse-2-0-what-changes-769a1c6a758e[Part 2].
 * Data contracts are a good idea, as is standardising them—of which the https://github.com/bitol-io/open-data-contract-standard[Open Data Contract Standard (ODCS)] is an example.
 * Jaehyeon Kim looks at https://jaehyeon.me/blog/2025-07-17-self-service-data-platform-via-sql-gateway/[how Apache Kyuubi provides a gateway] between end users and applications, and multiple database engines including Flink, Spark, and Trino.
 
@@ -46,15 +43,15 @@ Some will argue that at times veracity takes the back seat to telling a rollicki
 == CDC
 
 * 🔥 Debezium is widely used these days, making Vojtěch Juránek's article about https://debezium.io/blog/2025/07/07/quick-perf-check/[improving Debezium performance] a useful reference.
-* Abhishek Vishnoi has a hands-on guide that shows https://freedium.cfd/https://medium.com/@vishnoiabhishek1/how-to-implement-a-debezium-custom-converter-d203e3b9fb65[how to implement a custom converter in Debezium].
+* Abhishek Vishnoi has a hands-on guide that shows https://medium.com/@vishnoiabhishek1/how-to-implement-a-debezium-custom-converter-d203e3b9fb65[how to implement a custom converter in Debezium].
 * An excellent blog post as always from Gunnar Morling, this time looking at https://www.morling.dev/blog/mastering-postgres-replication-slots/[Postgres Replication Slots: Preventing WAL Bloat and Other Production Issues].
 * Debezium https://debezium.io/blog/2025/07/09/debezium-3-2-final-released/[3.2.0.Final Released]
 
 == Kafka and Event Streaming
 
 * _Is it even an edition of Interesting Links if there's not a new Kafka clone, either in a different language or deployed using a different architecture?_
-This month, Ravi Atluri writes about https://freedium.cfd/https://medium.com/gojekengineering/introducing-xkafka-kafka-but-simpler-for-go-91f4ce3edade[xkafka — Kafka, but Simpler (for Go)].
-* 🔥 Mark Teehan has built https://freedium.cfd/https://medium.com/@streamsend/a-fancy-way-to-send-a-file-streaming-files-through-kafka-topics-4278fed4bf12[a fancy way to send a file: Streaming Files Through Kafka topics].
+This month, Ravi Atluri writes about https://medium.com/gojekengineering/introducing-xkafka-kafka-but-simpler-for-go-91f4ce3edade[xkafka — Kafka, but Simpler (for Go)].
+* 🔥 Mark Teehan has built https://medium.com/@streamsend/a-fancy-way-to-send-a-file-streaming-files-through-kafka-topics-4278fed4bf12[a fancy way to send a file: Streaming Files Through Kafka topics].
 
 == Stream Processing
 
@@ -68,8 +65,8 @@ This month, Ravi Atluri writes about https://freedium.cfd/https://medium.com/goj
 
 * Some people read manuals to learn, but if you're like me and like learning through doing the https://www.sqlnoir.com/[SQL Noir] online game is a thriller in which you solve puzzles using SQL skills that you develop.
 If this is your kind of thing you'll also like this https://www.sqlnoir.com/blog/games-to-learn-sql[list of SQL games] that SQL Noir also published.
-* Are data warehouses a good idea? Definitely. Does everyone need one on day one? Nope. Aleksei Aleinikov has some wise words on https://freedium.cfd/https://medium.com/data-engineer-things/five-signs-you-can-skip-the-dwh-in-2025-2078e000faec[when the right time is—and isn't—to build one].
-* 🔥 Despite the "listicle" title—_which would normally have me clicking away faster than https://www.reddit.com/r/interestingasfuck/s/HZz0CsC1ye[Andy Byron can hide from a camera]_—this article from Bernd Wessely has some excellent points in it: https://freedium.cfd/https://medium.com/data-engineer-things/unlearning-data-architecture-10-myths-worth-killing-946e728f1acf[Unlearning Data Architecture: 10 Myths Worth Killing].
+* Are data warehouses a good idea? Definitely. Does everyone need one on day one? Nope. Aleksei Aleinikov has some wise words on https://medium.com/data-engineer-things/five-signs-you-can-skip-the-dwh-in-2025-2078e000faec[when the right time is—and isn't—to build one].
+* 🔥 Despite the "listicle" title—_which would normally have me clicking away faster than https://www.reddit.com/r/interestingasfuck/s/HZz0CsC1ye[Andy Byron can hide from a camera]_—this article from Bernd Wessely has some excellent points in it: https://medium.com/data-engineer-things/unlearning-data-architecture-10-myths-worth-killing-946e728f1acf[Unlearning Data Architecture: 10 Myths Worth Killing].
 * Ben Dicken explains https://planetscale.com/blog/caching[caching] in this article with nice animations.
 * Dominik Tornow has a good https://dtornow.substack.com/p/jepsen-and-tigerbeetle[analysis and commentary] on the findings of the recent https://jepsen.io/analyses/tigerbeetle-0.16.11[Jepsen testing of TigerBeetle].
 * Interesting papers:
@@ -87,7 +84,7 @@ If this is your kind of thing you'll also like this https://www.sqlnoir.com/blog
 * *Stifel* - https://aws.amazon.com/blogs/big-data/how-stifel-built-a-modern-data-platform-using-aws-glue-and-an-event-driven-domain-architecture/[Building a modern data platform using AWS Glue and an event-driven domain architecture].
 * *Pinterest* - https://medium.com/pinterest-engineering/next-gen-data-processing-at-massive-scale-at-pinterest-with-moka-part-1-of-2-39a36d5e82c4[Next Gen Data Processing at Massive Scale (Part 1 of 2)].
 * 🔥 *Datadog* - https://www.datadoghq.com/blog/engineering/reliable-log-delivery/[How we built reliable log delivery to thousands of unpredictable endpoints].
-* *Lion* - https://freedium.cfd/https://medium.com/data-engineer-things/how-we-built-the-aws-data-analytics-platform-part-1-b4c798d17094[How We Built the AWS Data & Analytics Platform (Part 1)].
+* *Lion* - https://medium.com/data-engineer-things/how-we-built-the-aws-data-analytics-platform-part-1-b4c798d17094[How We Built the AWS Data & Analytics Platform (Part 1)].
 
 == And finally…
 
@@ -100,4 +97,8 @@ It's genuine, it's articulate (and it reminds me of _real blogging_ that used to
 
 ---
 
-TIP: If you like these kind of links you might like to read about https://rmoff.net/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
+[NOTE]
+====
+* If you like these kind of links you might like to read about https://rmoff.net/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
+* If you have trouble accessing Medium posts, try using https://scribe.rip/[`scribe.rip`].
+====
