--- a/content/post/il-template.adoc
+++ b/content/post/il-template.adoc
@@ -37,5 +37,5 @@ _Nothing to do with data, but stuff that I've found interesting or has made me s
 [NOTE]
 ====
 * If you like these kind of links you might like to read about /2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
-* I'm linking out to https://freedium.cfd/[Freedium] versions of Medium posts, because Medium seems to be pay-walling a bunch of otherwise-freely accessible content.
+* If you have trouble accessing Medium posts, try using https://scribe.rip/[`scribe.rip`].
 ====
