proof read, images updated

--- a/content/post/ai-agents.adoc
+++ b/content/post/ai-agents.adoc
@@ -244,3 +244,9 @@ That way the user gets to trade off convenience (no HITL) with risk (unintended 
 
 The purpose of this blog series is for me to take notes as I try to build my understanding of this space.
 If I've got anything wrong, or am missing some important nuances—please let me know in the comments below 😁 👇
+
+== Update: It turns out I was talking nonsense!
+
+Nonsense may be putting it too strongly.
+But certainly, there was a detail in my understanding of agents that I was weighing wrong in my thinking about them.
+See what you think: link:/2025/11/20/ive-been-thinking-about-agents-and-mcp-all-wrong/[I’ve been thinking about Agents and MCP all wrong].
