--- a/content/post/streaming-agents.adoc
+++ b/content/post/streaming-agents.adoc
@@ -1,6 +1,7 @@
 ---
 draft: false
-title: 'I''ve been thinking about Agents and MCP all wrong'
+title: 'Stumbling into AI: Part 6—I''ve been thinking about Agents and MCP all wrong'
+slug: ive-been-thinking-about-agents-and-mcp-all-wrong
 date: "2025-11-20T03:42:10Z"
 image: "/images/2025/11/h_IMG_3098.webp"
 thumbnail: "/images/2025/11/t_IMG_4379.webp"
