Update Iceberg connector installation instructions
Removed outdated information about building the Apache Iceberg connector and added a note that it is now available on Confluent Hub.

--- a/content/post/kc-iceberg-glue.adoc
+++ b/content/post/kc-iceberg-glue.adoc
@@ -39,8 +39,9 @@ There is a rich ecosystem of connectors for getting data in and out of Kafka, an
 The Apache Iceberg connector for Kafka Connect was https://www.tabular.io/blog/intro-kafka-connect/[originally created by folk at Tabular] and has subsequently been https://github.com/apache/iceberg/pull/8701#issue-1922301136[contributed to] https://iceberg.apache.org/docs/nightly/kafka-connect/[the Apache Iceberg project] (via a brief stint on https://github.com/databricks/iceberg-kafka-connect[a Databricks repo] following the Tabular acquisition).
 
 For the purposes of this blog I'm still using the Tabular version since it has a pre-built binary available on https://www.confluent.io/hub/tabular/iceberg-kafka-connect[Confluent Hub] which makes it easier to install.
-If you want to use the Apache Iceberg version you currently https://iceberg.apache.org/docs/nightly/kafka-connect/#installation[need to build the connector yourself].
-There is https://github.com/apache/iceberg/issues/10745[work underway] to make it available on Confluent Hub.
++++<del>If you want to use the Apache Iceberg version you currently https://iceberg.apache.org/docs/nightly/kafka-connect/#installation[need to build the connector yourself].</del>+++
++++<del>There is https://github.com/apache/iceberg/issues/10745[work underway] to make it available on Confluent Hub.</del>+++
+https://www.confluent.io/hub/tabular/iceberg-kafka-connect[Confluent Hub] now hosts the Apache Iceberg version of the connector.
 
 I'm running a https://hub.docker.com/r/confluentinc/cp-kafka-connect[Kafka Connect Docker image] provided by Confluent because it provides the https://docs.confluent.io/platform/7.5/connect/confluent-hub/client.html#install-components-with-c-hub-client[`confluent-hub` CLI tool] which is a handy way for installing pre-built connectors and saves me having to do it myself.
 It's worth noting that the `confluent-hub` CLI is being deprecated in favour of the broader `confluent` CLI tool and `confluent connect plugin install` to install connectors.
