--- a/themes/story/archetypes/il.adoc
+++ b/themes/story/archetypes/il.adoc
@@ -9,30 +9,50 @@ categories:
 - Interesting Links
 ---
 
-_Not got time for all this? I've marked 🔥 for my top reads of the month_ :)
-
 <!--more-->
 
-== Data Engineering
+_Not got time for all this? I've marked 🔥 for my top reads of the month_ :)
 
 == Kafka and Event Streaming
 
 == Stream Processing
 
+=== Streaming Analytics
 
-== AI
+== Analytics
+
+== Data Platforms, Architectures, and Modelling
+
+== Data Engineering, Pipelines, and CDC
+
+== Open Table Formats (OTF), Catalogs, Lakehouses etc.
+
+== RDBMS
 
 == General Data Stuff
 
+== AI
 
-== Data in Action
+_I warned you link:/2025/09/30/interesting-links-september-2025/#_ai[previously]…this AI stuff is here to stay, and it'd be short-sighted to think otherwise._
+_As I read and learn more about it, I'm going to share interesting links (the clue is in the blog post title) that I find—whilst trying to avoid the breathless hype and slop._
 
 
 == And finally…
 
 _Nothing to do with data, but stuff that I've found interesting or has made me smile._
 
+=== Think
+
+=== Tool
+
+=== Watch
+
+=== Nerd
 
 ---
 
-TIP: If you like these kind of links you might like to read about https://rmoff.net/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
+[NOTE]
+====
+* If you like these kind of links you might like to read about https://rmoff.net/2024/05/22/how-i-try-to-keep-up-with-the-data-tech-world-a-list-of-data-blogs/[How I Try To Keep Up With The Data Tech World (A List of Data Blogs)]
+* If you have trouble accessing Medium posts, try using https://scribe.rip/[`scribe.rip`].
+====
